ecmascript/parser/tests/test262-error-references/fail/f639cd9b998df512.js.stderr
error: Unexpected token Some(RParen). Expected one of yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/f639cd9b998df512.js:1:15
  |
1 | function t(...) { }
  |               ^

